2005-03-03  Carl Worth  <cworth@cworth.org>

	* src/ictrap.c: Restore original copyright and license which must
	have been inadvertently changed.

2005-03-02  Carl Worth  <cworth@cworth.org>

	* src/pixman-xserver-compat.h: Fix comment to clarify that
	libpixman regards the xserver repository as its canonical upstream
	for some files.

	* src/ic.c, src/icblt.c, src/icbltone.c, src/iccolor.c,
	src/iccompose.c, src/icformat.c, src/icimage.c, src/icimage.h,
	src/icint.h, src/icpixels.c, src/icrect.c, src/icrop.h,
	src/icstipple.c, src/ictransform.c, src/ictrap.c, src/ictri.c,
	src/icutil.c, src/pixman.h, src/slim_internal.h: Convert file
	encodings from ISO-8859 to UTF-8.

2005-02-21  Carl Worth  <cworth@cworth.org>

	* src/renderedge.h: Add only-just-better-than-ASCII-art diagram
	showing all macros used in locating sub-pixel sample rows/columns.
	
	* src/renderedge.h (RenderEdgeStepSmall, RenderEdgeStepBig): Add
	missing protective parentheses around macro parameter usage.

2005-02-21  Carl Worth  <cworth@cworth.org>

	* src/ic.c: 
	* src/icint.h: Move definition of __inline for non-gcc from ic.c
	to icint.h so it applies to more code in the implementation.

2005-02-06  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Add AC_PREREQ(2.54) to help the Debian 
	auto-guess-which-configure-version hack.

2005-01-26  Carl Worth  <cworth@cworth.org>

	* src/pixman.h: Use 32-bits for pixman_bits_t, even on 64-bit
	platforms. This should fix bug #2335 as well as rendering problems
	seen on 64-bit platforms.

2005-01-21  Carl Worth  <cworth@cworth.org>

	* NEWS: Add notes for snapshot 0.1.3.

	* configure.in: Increment version to 0.1.3

	* RELEASING: Add reminder to diff pixman.h to look for API changes
	since the last snapshot.

	* src/Makefile.am (libpixman_la_SOURCES): Add missing files to
	satisfy make distcheck.

	* Makefile.am (RELEASE_UPLOAD_DIR): Update for changed www
	directory on server.

	* src/pixman-xserver-compat.h): Add pixman-xserver-compat.h, (that